--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,8 @@ lazy-object-proxy==1.3.1
 mccabe==0.6.1
 pycodestyle==2.3.1
 pyflakes==1.6.0
+python-crontab==2.2.8
+python-dateutil==2.6.1
 pytz==2018.3
 six==1.11.0
 wrapt==1.10.11
